--- a/style.css
+++ b/style.css
@@ -51,3 +51,43 @@ form button {
 form button:hover {
     background-color: #0052a3;
 }
+
+form button:active {
+    background-color: #003d7a;
+    transform: scale(0.98);
+}
+
+form input[type="password"],
+form input[type="email"] {
+    margin-bottom: 1rem;
+}
+
+form .form-group {
+    margin-bottom: 1.5rem;
+}
+
+form .remember-me {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1.5rem;
+}
+
+form .remember-me input[type="checkbox"] {
+    width: auto;
+    margin-right: 0.5rem;
+    margin-bottom: 0;
+}
+
+form .remember-me label {
+    margin-bottom: 0;
+    font-weight: normal;
+}
+
+form a {
+    color: #0066cc;
+    text-decoration: none;
+}
+
+form a:hover {
+    text-decoration: underline;
+}
